[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/quests/npcs/quest_1/quest_1.gd" type="Script" id=1]
[ext_resource path="res://assets/npc/character_femalePerson_idle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 88 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 88 )

[node name="quest_1" type="StaticBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 40 )
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
